--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <section class="about_me">
                 <h1>Cecil Allen Adame</h1>
                 <p>Computer Technician II</p>
+                <p>Email: cjadame1994361@gmail.com</p>
                 <h4>Aransas Pass, Texas</h4>
             </section>
         </main>
