--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             </section>
             <section class="about_me">
                 <h1>Cecil Allen Adame</h1>
-                <p>Computer Technician II</p>
-                <p>Email: cjadame1994361@gmail.com</p>
+                <p>Computer Technician II <br>
+                cadame@apisd.org <br>
+                361-230-4676</p>
                 <h4>Aransas Pass, Texas</h4>
             </section>
         </main>
