--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             </section>
             <section class="about_me">
                 <h1>Cecil Allen Adame</h1>
+                <h4>Aransas Pass ISD</h4>
                 <p>Computer Technician II <br>
                 cadame@apisd.org <br>
                 361-230-4676</p>
-                <h4>Aransas Pass, Texas</h4>
+                
             </section>
         </main>
     </a>
