--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <img src="./Images/IMG_20230717_141516197.jpg" alt="CJ Adame in perfect selfie!" class="avatar">
             </section>
             <section class="about_me">
-                <h1>Cecil Allen Adame</h1>
-                <h4>Aransas Pass ISD</h4>
+                <h1 class="h-margin">Cecil Allen Adame</h1>
+                <h4 class="h-margin">Aransas Pass ISD</h4>
                 <p>Computer Technician II <br>
                 cadame@apisd.org <br>
                 361-230-4676</p>
